--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v3.0.3
         with:
-          dotnet-version: 7.0.x
+          dotnet-version: 7.0.201
 
       - name: Install GitVersion
         uses: gittools/actions/gitversion/setup@v0.9.7
