--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,13 +1,16 @@
 name: Release
 
+# on:
+#   push:
+#     branches:
+#       - main
+#       - master
+#     tags:
+#       - v*.*.*
+
 on:
-  push:
-    branches:
-      - main
-      - master
-    tags:
-      # - v(0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(?:-((?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\.(?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?
-      - v*.*.*
+  release:
+    types: [released, published]
 
 
 jobs:
