--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,17 +1,12 @@
 name: Release
 
-# on:
-#   push:
-#     branches:
-#       - main
-#       - master
-#     tags:
-#       - v*.*.*
-
 on:
-  release:
-    types: [released, published]
-
+  push:
+    branches:
+      - main
+      - master
+    tags:
+      - v*.*.*
 
 jobs:
 
@@ -52,3 +47,10 @@ jobs:
       - name: Pack
         run: |
           dotnet pack --configuration Release -p:Version=${{ steps.gitversion.outputs.semVer }} -o ./outputs/packages/ -p:SymbolPackageFormat=snupkg -p:IncludeSymbols=True -p:DebugType=portable
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            ./outputs/packages/*.nupkg
+            ./outputs/packages/*.snupkg
