--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,9 +45,16 @@ jobs:
         run: |
           dotnet pack --configuration Release -p:Version=${{ steps.gitversion.outputs.semVer }} -o ./outputs/packages/ -p:SymbolPackageFormat=snupkg -p:IncludeSymbols=True -p:DebugType=portable
 
-      - name: Release
+      - name: Add to release
         uses: softprops/action-gh-release@v1
         with:
           files: |
             ./outputs/packages/*.nupkg
             ./outputs/packages/*.snupkg
+
+      - name: Push to NuGet
+        run: |
+          dotnet nuget push ./outputs/packages/*.nupkg --api-key $NUGET_AUTH_TOKEN --source https://api.nuget.org/v3/index.json --skip-duplicate
+          dotnet nuget push ./outputs/packages/*.snupkg --api-key $NUGET_AUTH_TOKEN --source https://api.nuget.org/v3/index.json --skip-duplicate
+        env:
+          NUGET_AUTH_TOKEN: ${{ secrets.NUGET_TOKEN }}
