--- a/src/NuGetLibrary/NuGetLibrary.csproj
+++ b/src/NuGetLibrary/NuGetLibrary.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <LangVersion>latest</LangVersion>
+    <PackageId>Kralizek.NuGetLibrary</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
